@@ -820,14 +820,14 @@ void FVTermTest::noArgumentTest()
   CPPUNIT_ASSERT ( fvterm_1.getWindowList()->size() == 0 );
 
   // With own output class
-  finalcut::FVTerm fvterm_3(finalcut::outputClass<FTermOutputTest>{});
+  finalcut::FVTerm fvterm_2(finalcut::outputClass<FTermOutputTest>{});
 
-  const auto& vwin = fvterm_3.getVWin();
+  const auto& vwin = fvterm_2.getVWin();
   CPPUNIT_ASSERT ( ! vwin );
-  CPPUNIT_ASSERT ( fvterm_3.getPrintCursor() == finalcut::FPoint(0, 0) );
-  CPPUNIT_ASSERT ( fvterm_3.getWindowList() );
-  CPPUNIT_ASSERT ( fvterm_3.getWindowList()->empty() );
-  CPPUNIT_ASSERT ( fvterm_3.getWindowList()->size() == 0 );
+  CPPUNIT_ASSERT ( fvterm_2.getPrintCursor() == finalcut::FPoint(0, 0) );
+  CPPUNIT_ASSERT ( fvterm_2.getWindowList() );
+  CPPUNIT_ASSERT ( fvterm_2.getWindowList()->empty() );
+  CPPUNIT_ASSERT ( fvterm_2.getWindowList()->size() == 0 );
 }
 
 //----------------------------------------------------------------------
